--- a/css/main.css
+++ b/css/main.css
@@ -1,101 +1,193 @@
-* {
-  box-sizing: border-box;
-  font-family: Verdana;
-}
-h1 {
-  margin-bottom: 15px;
-  text-align:  center;
 
+.container-fluid{
+	margin: 0;
+	padding: 0;
 }
 
-p{
-  margin-left: 10px;
-  font-weight: lighter;
+.navbar{
+	border-radius: 0px;
+	background-color: rgba(0,0,0,0.8);
 }
 
-.chicken {
-  height: 25px;
-  width: 33.3%;
-  text-align: center;
-  margin-top: 0px;
-  margin-bottom: 2px;
-  background-color: #FFAABB;
-  border: 1px solid black; 
-  color: black;
-  float : right;
-  font-weight: bold;
-}
-
-.beef {
-  height: 25px;
-  width: 33.3%;
-  margin-top: 0px;
-  margin-bottom: 2px;
-  text-align: center;
-  background-color: #cc0000;
-  border: 1px solid black; 
+.navbar-brand{
+  font-size: 35px;
   color: white;
-  float : right;
-  font-weight: bold;
+  padding-left: 25px;
 }
 
-.sushi {
-  height: 25px;
-  width: 33.3%;
-  margin-top: 0px;
-  margin-bottom: 2px;
+.navbar-brand:hover{
+	color: white;
+}
+
+.nav{
+	margin: 0;
+	padding: 0;
+}
+
+.navbar-nav{
+  font-size: 25px;
   text-align: center;
-  background-color: #dddd00;
-  border: 1px solid black; 
-  color: black;
-  float : right;
+  margin: 0;
+  padding: 0;
+}
+
+.navbar-toggle{
+	border: 2px solid white;
+	margin-right: 25px;
+}
+
+.icon-bar{
+	background-color: white;
+}
+
+
+.main-title{
+  margin-bottom: 15px;
+  text-align: center;
+  color: #ff4532;
+  font-size: 50px;
+  font-family: "Comic Sans MS", cursive, sans-serif;
   font-weight: bold;
 }
 
-.divclass {
-  border: 1px solid black;
-  background-color: gray;
-  width: 95%;
-  height: 180px;
-  margin-right:auto;
-  margin-left: auto;
+li{
+	box-sizing: border-box;
+	width: 100%;
+}
+
+.menu-item{
+	padding: 0;
+	margin: 0;
+	width: 100%;
+	background-color: white;
+	border-bottom: 1px solid black;
+	color: black;
+	display: block;
+}
+
+.menu-item:hover{
+	background-color: rgba(0,0,0,0.9);
+	color: rgba(0,0,0,0.4);
+}
+
+
+
+.row{
+	margin: 20px;
+}
+
+.content-box{
+	margin: 20px;
+	width: auto;
+	height: auto;
+	color: black;
+	background-color: rgba(0,0,0,0.2);
+	font-family: "Comic Sans MS", cursive, sans-serif;
+	padding: 20px;
+}
+
+.item-name{
+	text-align: center;
+	font-size: 20px;
+	font-weight: bold;
+}
+
+#top{
+
+}
+.container-fluid{
+	margin: 0;
+	padding: 0;
+}
+
+.navbar{
+	border-radius: 0px;
+	background-color: rgba(0,0,0,0.8);
+}
+
+.navbar-brand{
+  font-size: 35px;
+  color: white;
+  padding-left: 25px;
+}
+
+.navbar-brand:hover{
+	color: white;
+}
+
+.nav{
+	margin: 0;
+	padding: 0;
+}
+
+.navbar-nav{
+  font-size: 25px;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
+
+.navbar-toggle{
+	border: 2px solid white;
+	margin-right: 25px;
+}
+
+.icon-bar{
+	background-color: white;
+}
+
+
+.main-title{
   margin-bottom: 15px;
-  margin-top: 10px;
-  font-family: Verdana;  /*Helvetica;*/
-  color: black;
+  text-align: center;
+  color: #ff4532;
+  font-size: 50px;
+  font-family: "Comic Sans MS", cursive, sans-serif;
+  font-weight: bold;
 }
 
-/* Simple Responsive Framework. */
-.row {
-  width: 100%;
+li{
+	box-sizing: border-box;
+	width: 100%;
 }
 
-/********** Medium devices only **********/
-@media (min-width: 768px) and (max-width: 991px) {
-  .col-md-1, .col-md-3 {
-    float: left;
-    border: 1px ;
-  }
-  .col-md-1 {
-    width: 50%;
-  }
-  .col-md-3 {
-    width: 100%;
-  }
+.menu-item{
+	padding: 0;
+	margin: 0;
+	width: 100%;
+	background-color: white;
+	border-bottom: 1px solid black;
+	color: black;
+	display: block;
 }
 
-/********** Large devices only **********/
-@media (min-width: 992px) {
-  .col-lg-1, .col-lg-3{
-    float: left;
-    border: 1px ;
-  }
-  .col-lg-1 {
-    width: 33.3%;
-  }
-  .col-lg-3 {
-    width: 33.3%;
-  }
- 
-  }
+.menu-item:hover{
+	background-color: rgba(0,0,0,0.9);
+	color: rgba(0,0,0,0.4);
+}
+
+
+
+.row{
+	margin: 20px;
+}
+
+.content-box{
+	margin: 20px;
+	width: auto;
+	height: auto;
+	color: black;
+	background-color: rgba(0,0,0,0.2);
+	font-family: "Comic Sans MS", cursive, sans-serif;
+	padding: 20px;
+}
+
+.item-name{
+	text-align: center;
+	font-size: 20px;
+	font-weight: bold;
+}
+
+#top{
+
 }
